# HairClassificator

./: .gitignore  CMakeLists.txt  README.md  hair-classificator
include/: csv.hpp
src/: main.cpp
